--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "@supabase/supabase-js": "^2.44.4",
+    "expo-localization": "~18.0.0",
+    "react-native-web": "~0.19.10",
+    "expo-font": "~12.0.0"
   },
   "devDependencies": {
     "@types/react": "~18.3.0",
@@ -28,7 +32,12 @@
     "jest": "^29.7.0",
     "@jest/globals": "^29.7.0",
     "jest-expo": "~52.0.0",
-    "@types/jest": "^29.5.0"
+    "@types/jest": "^29.5.0",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2"
   },
   "jest": {
     "preset": "jest-expo",
