--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "web": "expo start --web",
     "test": "jest --passWithNoTests",
     "type-check": "tsc --noEmit",
     "lint": "eslint ."
@@ -24,7 +25,9 @@
     "@supabase/supabase-js": "^2.44.4",
     "expo-localization": "~18.0.0",
     "react-native-web": "~0.19.10",
-    "expo-font": "~12.0.0"
+    "expo-font": "~12.0.0",
+    "zustand": "^4.5.4",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@types/react": "~18.3.0",
@@ -46,3 +49,4 @@
     ]
   }
 }
+
