--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-web": "~0.19.10",
     "expo-font": "~12.0.0",
     "zustand": "^4.5.4",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo-updates": "~0.28.0"
   },
   "devDependencies": {
     "@types/react": "~18.3.0",
