feat: AIによる自動分類とユーザー確認 (by Zerocode) [skip ci]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,27 @@
       ],
       "@/src/*": [
         "src/*"
+      ],
+      "@/lib/*": [
+        "src/lib/*"
+      ],
+      "@/api/*": [
+        "src/api/*"
+      ],
+      "@/components/*": [
+        "src/components/*"
+      ],
+      "@/hooks/*": [
+        "src/hooks/*"
+      ],
+      "@/stores/*": [
+        "src/stores/*"
+      ],
+      "@/types/*": [
+        "src/types/*"
+      ],
+      "@/i18n": [
+        "src/i18n.ts"
       ]
     }
   },
