--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "expo-font": "~12.0.9",
     "expo-localization": "~11.0.4",
     "expo-av": "~14.0.6",
-    "i18n-js": "^4.4.3"
+    "i18n-js": "^4.4.3",
+    "@tanstack/react-query": "^5.50.1"
   },
   "devDependencies": {
     "@types/react": "~18.3.0",
