feat: リアルタイム同期とオフライン対応 (by Zerocode) [skip ci]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".expo/types/**/*.ts",
-    "expo-env.d.ts"
+    "expo-env.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx"
   ]
 }
