--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "expo-localization": "~11.0.4",
     "expo-av": "~14.0.6",
     "i18n-js": "^4.4.3",
-    "@tanstack/react-query": "^5.50.1"
+    "@tanstack/react-query": "^5.50.1",
+    "@react-native-community/netinfo": "11.3.1"
   },
   "devDependencies": {
     "@types/react": "~18.3.0",
