feat: アクセシビリティ対応とUIの洗練 (by Zerocode) [skip ci]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,20 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "src/**/*.ts",
-    "src/**/*.tsx"
+    "src/**/*.tsx",
+    "app/**/*.ts",
+    "app/**/*.tsx",
+    "components/**/*.ts",
+    "components/**/*.tsx",
+    "hooks/**/*.ts",
+    "hooks/**/*.tsx",
+    "i18n/**/*.ts",
+    "i18n/**/*.tsx",
+    "lib/**/*.ts",
+    "lib/**/*.tsx",
+    "stores/**/*.ts",
+    "stores/**/*.tsx",
+    "types/**/*.ts",
+    "types/**/*.tsx"
   ]
 }
-
