--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
         "src/types/*"
       ],
       "@/i18n": [
-        "src/i18n/index.ts"
+        "i18n/index.ts"
       ]
     }
   },
@@ -57,6 +57,8 @@
     "stores/**/*.ts",
     "stores/**/*.tsx",
     "types/**/*.ts",
-    "types/**/*.tsx"
+    "types/**/*.tsx",
+    "jest.setup.js",
+    "jest.config.js"
   ]
 }
